[package]
name = "pinpoint"
version = "0.1.1"
authors = ["DutchGhost <kasper199914@gmail.com>"]
description = "Crate for pinned references"
license = "MIT"
repository = "https://github.com/DutchGhost/pinpoint"
edition = "2018"

keywoard = ["pin", "as_pin", "pinned"]
categories = ["rust-patterns"]

[dependencies]

[features]
pinned = []

[package.metadata.docs.rs]
features = ["pinned"]
no-default-features = true